# lazyagent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/plans/: terminal-rendering-tech-debt.md
.github/workflows/: ci.yml  publish.yml
.specs/: provider-observability-plan.md
docs/: terminal-text-selection.md
src/lazyagent/: __init__.py  __main__.py  agent_observers.py  agent_providers.py  app.py  config.py  messages.py  models.py  pty_emulator.py  pyte_patch.py  styles.py  worktree_manager.py
src/lazyagent/widgets/: __init__.py  center_panel.py  confirm_modal.py  create_worktree_modal.py  help_modal.py  monitored_terminal.py  pr_status_bar.py  prompt_modal.py  scrollable_terminal.py  worktree_list.py
tests/: test_agent_observers.py  test_agent_providers.py  test_center_panel.py  test_config.py  test_models.py  test_monitored_terminal.py  test_pyte_patch.py  test_scrollable_terminal.py  test_worktree_manager.py
