[project]
name = "lazyagent"
version = "0.1.0"
description = "A Textual TUI for managing coding agents across git worktrees"
requires-python = ">=3.10"
dependencies = [
    "textual>=8.0.0",
    "textual-terminal>=0.3.0,<0.4.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
lazyagent = "lazyagent.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyagent"]

[dependency-groups]
dev = [
    "textual-dev",
    "pytest",
    "pytest-asyncio",
]
