[project]
name = "lazyagent"
version = "0.2.0"
description = "A Textual TUI for managing coding agents across git worktrees"
requires-python = ">=3.10"
dependencies = [
    "pyte>=0.8.0",
    "textual>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
lazyagent = "lazyagent.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyagent"]

[dependency-groups]
dev = [
    "textual-dev",
    "pytest",
    "pytest-asyncio",
]
